src/main/resources/static/css/index.css
body{
    margin-top: 10px;
    /*background-image: url("../img/sky-bg.jpg");*/
    background-size: 100% 130%;
    /*background-repeat: no-repeat;*/
    /*background-attachment: fixed;*/
    /*background-position: top;*/
    /*background-color: rgb(7, 3, 2);*/
    background: #dde0e3;
}

.bottom-10{
    bottom: 10%;
    !important;
}


/* Navigation Bar */
.navbar{
    padding: 20px 10px 20px 0;
    background: transparent;
    transition: all ease 0.4s;
}
.navbar-brand{
    font-size: 22px;
    color: white !important;
}
.navbar .navbar-nav li a{
    font-size: 16px;
    color: white;
}

.navbar-toggler{
    border: none;
    outline: none !important;
    opacity: 0.8;
}

.scroll-to-top{
    position: fixed;
    bottom: 30px;
    right: 30px;
    width: 50px;
    height: 50px;
    background: #0a53be;
    color: #fff;
    border-radius: 50px;
    text-align: center;
    line-height: 46px;
    transition: all ease 0.3s;
        z-index: 99;
    opacity: 0.8;
    display: none;
}

.scroll-to-top:hover{
    background: #0a53be;
    color: #fff;
    opacity: 1;
/*    커서 모양*/
    cursor: pointer;
}

.scroll-to-top:focus{
    outline: none;
}

.scroll-to-top-show{
    bottom: 30px;
    right: 30px;
    opacity: 1;
    display: block;
    transition: all ease 0.3s;
}

/* Animation */
.navbar-animate{
    padding: 0 10px 0 0;
    transition: all ease 0.4s;
    background-color: #1e2125;
    /*background: transparent;*/
}
.navbar:hover{
    background-color: #1e2125;
}

.navbar-no-hover{
    z-index: 0;
}

.navbar-no-hover:hover{
    background-color: transparent;
}


.nav-link:hover{
    color: #0a53be !important;
    cursor: pointer;
}


/* Research Card */
.card-container {
   opacity: 0.95;
}

.card {
    border: none;
    border-radius: 10px;
}

.c-details span {
    font-weight: 300;
    font-size: 13px;

}

/*.icon {*/
/*    width: 50px;*/
/*    height: 50px;*/
/*    background-color: #eee;*/
/*    border-radius: 15px;*/
/*    display: flex;*/
/*    align-items: center;*/
/*    justify-content: center;*/
/*    font-size: 39px*/
/*}*/

.badge span{
    background-color: #fffbec;
    width: 60px;
    height: 25px;
    border-radius: 5px;
    display: flex;
    color: #fed85d;
    justify-content: center;
    align-items: center;
}



.badge-bg-almost span {
    background-color: #FAD02E; /* 밝은 노란색 배경 */
    color: #fff; /* 텍스트 색상을 흰색으로 변경 */
}

.badge-bg-progress span{
    background-color: #53C8C8; /* 청록색 배경 */
    color: #fff; /* 텍스트 색상을 흰색으로 변경 */
}

.badge-bg-end span{
    background-color: #FF6B6B; /* 연분홍색 배경 */
    color: #fff; /* 텍스트 색상을 흰색으로 변경 */
}



.progress {
    height: 10px;
    border-radius: 10px
}

.progress div {
    background-color: red
}

.text1 {
    font-size: 14px;
    font-weight: 600
}

.text2 {
    color: #a5aec0
}

.sidebar-container{
    background: #1e2125;
    opacity: 0.8;
    /*background: transparent;*/
    height: 100%;
    left: 0;
    width: 21em;
    transition: all ease 0.4s;
}
/* Side bar */
.sidebar{
    list-style: none;
    /*left: 0;*/
    margin: 0;
    padding: 0;
    /*position: absolute;*/
    /*top: 10%;*/
    /*left: 0;*/
    width: 23em;
    /*height: 80%;*/
    /*max-height: 80%; !* 최대 높이를 지정 *!*/
    /*background: #1e2125;*/
    /*z-index: 99;*/
    /*transition: all ease 0.4s;*/
    overflow-y: scroll; /* 세로 스크롤 추가 */
    overflow-x: hidden; /* 가로 스크롤 숨김 */
}

.sidebar-item{
    padding: 10px;
    margin: 10px;
    /*border: 1px solid #666;*/
    /*border: 3px solid #666;*/
    /*background-color: #ddd;*/
    /*border-radius: .5em;*/
    cursor: pointer;
}
.sidebar-item.over{
    border: 3px dotted #666;
}


.item-movable{
    cursor: move;
}


.dropdown-menu{
    /*z-index: 100;*/
}


.sidebar-container.hide{
    left: -21em;

}

.sidebar-toggle{
    position: absolute;
    top: 2em;
    left: 0;
    width: 2em;
    height: 2em;
    background: #0a53be;
    color: #fff;
    border-radius: 50px;
    text-align: center;
    line-height: 46px;
    transition: all ease 0.3s;
    z-index: 99;
    opacity: 0.8;
}

.sidebar-toggle.hide{
    top: 2em;
    left: -15em;
}


/*create page*/
.main-content-toggle{
    top: 2em;
    padding-left: 22em;
    margin-left: 0;
    transition: all ease 0.4s;
}

.main-content-toggle.hide{
    top: 2em;
    padding-left: 2em;
    margin-left: 0;
}

/* create page popup menu button*/

